[package]

name = "curlers"
version = "0.1.0"
authors = ["Carol (Nichols || Goulding), carol.nichols@gmail.com"]
license = "MIT"
description = "Rust implementation of libcurl for making HTTP requests"

[dependencies]
libc = "0.2"
curl-sys = { path = "curl-sys", version = "0.3.10" }

# Unix platforms use OpenSSL for now to provide SSL functionality
[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies]
openssl-sys = "0.9.0"
openssl-probe = "0.1"

[target."cfg(windows)".dependencies]
winapi = "0.2"

[dev-dependencies]
mio = "0.6"

[workspace]
members = ["systest"]
